kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agentfx-web-service
  namespace: agentfx
  labels:
    app: agentfx-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: agentfx-web
